@@ -41,6 +41,28 @@ Instantiator::~Instantiator()
 { }
 
 
+boost::thread*
+Instantiator::getThread(EvaluatorPtr eval)
+{
+  EvaluatorList::iterator eval_it = std::find(evaluators.begin(), evaluators.end(), eval);
+  assert (eval_it != evaluators.end());
+
+  std::size_t dist = std::distance(evaluators.begin(), eval_it);
+  BoostThreadList::iterator thread_it = eval_threads.begin();
+  std::advance(thread_it, dist);  
+
+  return *thread_it;
+}
+
+
+void
+Instantiator::stopThread(EvaluatorPtr eval)
+{
+  boost::thread* t = getThread(eval);
+  t->join();
+}
+
+
 void
 Instantiator::removeEvaluator(EvaluatorWPtr eval)
 {
