@@ -1,5 +1,13 @@
 2012-02-20  Minh Dao-Tran  <dao@kr.tuwien.ac.at>
 
+	* include/dmcs/DLVInstantiator.h: Start and stop threads by instantiators.
+	* src/dmcs/DLVInstantiator.cpp: Likewise.
+	* include/dmcs/Instantiator.h: Likewise.
+	* src/dmcs/Instantiator.cpp: Likewise.
+	* src/mcs/NewContext.cpp: Likewise.
+
+	* include/dmcs/AbstractContext.h: Add some list types.
+
 	* testsuite/testAbstractContext.cpp: Fix test case.
 
 	* src/dmcs/Evaluator.cpp: Fix checking last NULL answer.
